--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
+    "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.3.0"
